vpc-endpoint-clusters/cluster1/istio/2.0-istio-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-eastwestgateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-name: "cluster1-istio"
spec:
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
    topology.istio.io/network: cluster1
  ports:
    - name: status-port
      port: 15021
      targetPort: 15021
    - name: tls
      port: 15443
      targetPort: 15443
    - name: tls-istiod
      port: 15012
      targetPort: 15012
    - name: tls-webhook
      port: 15017
      targetPort: 15017
  type: LoadBalancer
